# opengl-boilerplate

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
